# entertainme

./: Cargo.toml  README.md  build.rs
src/: games.rs  howlongtobeat_api.rs  main.rs  opencritic_api.rs  steam_api.rs
src/games/: howlongtobeat_api.rs  opencritic_api.rs  steam_api.rs
