[package]
name = "entertainme"
version = "0.1.0"
authors = ["Dror Levin <dror@psybear.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
once_cell = "1.5.2"
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", features = ["json"] }
scraper = "0.12.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0.23"
tokio = { version = "1.0.1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
once_cell = "1.5.2"
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", features = ["blocking", "json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.59"
