[package]
name = "entertainme"
description = "Helps you choose your next game."
version = "0.1.1"
authors = ["Dror Levin <dror@psybear.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/drrlvn/entertainme"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
once_cell = "1.5.2"
reqwest = { version = "0.11.0", features = ["json"] }
scraper = "0.12.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3.21"
thiserror = "1.0.23"
tokio = { version = "1.8.4", features = ["rt-multi-thread", "macros"] }
