[package]
name = "entertainme"
description = "Helps you choose your next game."
version = "0.1.1"
authors = ["Dror Levin <dror@psybear.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/drrlvn/entertainme"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0.64"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
